# tricking_highlights

./: README.md  pyproject.toml
highlights/: app.py  keypoints_processing.py  video_processing.py
highlights/example_results/: all_keypoints.parquet  all_keypoints_before_filtering.parquet  processed_keypoints_data.parquet  raw_keypoints_data.parquet
highlights/output/: processed_keypoints_data.csv  raw_keypoints_data.csv
