[tool.poetry]
name = "tricking highlights"
version = "0.1.0"
description = "This package extract highlights from your trickcing training session"
authors = ["Igor Mintz <igormintz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
transformers = "^4.44.2"
torch = "^2.4.1"
pillow = "^10.4.0"
ultralytics = "^8.2.89"
polars = "^1.6.0"
altair = "^5.4.1"
vl-convert-python = "^1.6.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
